k3s/overlays/prod/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: phoenix-web
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800 # 3 hours
  selector:
    app: phoenix-web
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 4000
